--- a/build.properties
+++ b/build.properties
@@ -18,7 +18,7 @@ flash.player.name.to.use=10.1
 flash.target.player.base=10.2
 flash.target.player=${flash.target.player.base}.0
 flash.use.10.1=true
-logging=true
+logging=false
 mock=false
 platform=true
 swfversion=11
